tests/rename/should_fail/T8448.stderr

T8448.hs:5:21: error: [GHC-53822]
    Constructor ‘[]’ does not have field ‘r’
